--- a/book/ki/kmeansclustering.ipynb
+++ b/book/ki/kmeansclustering.ipynb
@@ -11,7 +11,7 @@
     "# k-Means-Clustering\n",
     "Du kennst bereits den [k-Nächste-Nachbarn-Algorithmus](knearestneighbor), ein Verfahren, das mit [Trainingsdaten](#trainingsdaten) neue Daten klassifiziert. Nun betrachten wir [k-Means-Clustering](https://de.wikipedia.org/wiki/K-Means-Algorithmus), einen Algorithmus, um [Datenpunkte](#datenpunkt) in sogenannte Cluster zu gruppieren.\n",
     "\n",
-    "Im Bereich der KI wird oft mit großen Datenmengen gearbeitet, die auf Muster untersucht und in Gruppen eingeteilt werden. k-Means ist so ein Clustering-Algorithmus, der Datenpunkte ohne vorherige Kenntnis der Gruppenzugehörigkeit in k Cluster einteilt. Das macht k-Means zu einem [unüberwachten Lernalgorithmus](#unueberwachtes-lernen). Seine Stärke liegt in der effizienten Strukturierung großer Datensätze und dem Entdecken versteckter Muster.\n",
+    "Im Bereich der KI wird oft mit großen Datenmengen gearbeitet, die auf Muster untersucht und in Gruppen eingeteilt werden. Algorithmen dieser Art sind Verfahren der [Clusteranalyse](https://de.wikipedia.org/wiki/Clusteranalyse). k-Means ist so ein Algorithmus, der Datenpunkte ohne vorherige Kenntnis der Gruppenzugehörigkeit in $k$ Cluster einteilt. Das macht k-Means zu einem [unüberwachten Lernalgorithmus](#unueberwachtes-lernen). Seine Stärke liegt in der effizienten Strukturierung großer Datensätze und dem Entdecken versteckter Muster.\n",
     "\n",
     "```{margin}\n",
     "[Maschinelles Lernen](https://de.wikipedia.org/wiki/Maschinelles_Lernen) ist ein Teilgebiet der KI, in dem Algorithmen aus Daten lernen und Vorhersagen oder Entscheidungen treffen können. Algorithmen im Bereich des maschinellen Lernens haben das Ziel, große Datenmengen zu analysieren und Muster darin zu erkennen.\n",
@@ -26,7 +26,7 @@
     "\n",
     "Beide Algorithmen stammen aus dem Bereich **Maschinelles Lernen**, welches grob in **überwachtes Lernen** und **unüberwachtes Lernen** unterteilt wird. Beim [überwachten Lernen](https://de.wikipedia.org/wiki/Überwachtes_Lernen) wird ein Datensatz verwendet, der Trainingsdaten mit den zugehörigen **Labels** enthält. Das Modell lernt aus Beispielen, bei denen die richtigen Antworten bereits bekannt sind. Diese Methode eignet sich gut für Aufgaben wie Klassifikationen (z.B. Spam-Erkennung). Der [k-Nächste-Nachbarn-Algorithmus](knearestneighbor) ist ein solches Verfahren.\n",
     "\n",
-    "Beim [unüberwachten Lernen](https://de.wikipedia.org/wiki/Unüberwachtes_Lernen) gibt es keine gelabelten Trainingsdaten. Stattdessen versuchen unüberwachte Algorithmen, eigenständig Muster in den Daten zu erkennen. Clustering, wie k-Means, ist ein typisches Beispiel dafür. Der Algorithmus findet eigenständig Gruppen (Cluster) von ähnlichen Datenpunkten und hilft, ungeordnete Daten zu strukturieren."
+    "Beim [unüberwachten Lernen](https://de.wikipedia.org/wiki/Unüberwachtes_Lernen) sind die Trainingsdaten nicht gelabelt. Stattdessen versuchen unüberwachte Algorithmen, eigenständig Muster in den Daten zu erkennen. Clustering, wie k-Means, ist ein typisches Beispiel dafür. Der Algorithmus ermittelt Gruppen (Cluster) von ähnlichen Datenpunkten und hilft, ungeordnete Daten zu strukturieren."
    ]
   },
   {
@@ -35,9 +35,9 @@
    "source": [
     "## Einführung in das Verfahren\n",
     "\n",
-    "k-Means-Clustering gehört zum **unüberwachten Lernen**. Es gibt keine vordefinierten Labels, sondern nur die rohen Daten. Das Ziel von k-Means ist es, die Daten in **k Cluster** zu unterteilen, wobei **k** die Anzahl der Cluster darstellt. Der Algorithmus ermittelt **Zentroiden**, also Mittelpunkte, um die sich die Cluster bilden. **Means** steht dabei für den Durchschnitt, da die Zentroiden als Durchschnitt der zugehörigen Datenpunkte berechnet werden. Am Ende sind die Daten innerhalb eines Clusters homogener als zu den Daten in anderen Clustern.\n",
+    "k-Means-Clustering gehört zum **unüberwachten Lernen**. Es gibt keine vordefinierten Labels, sondern nur die rohen Daten. Das Ziel von k-Means ist es, die Daten in **$k$ Cluster** zu unterteilen, wobei $k$ die Anzahl der Cluster darstellt. Der Algorithmus ermittelt **Zentroiden**, auch Clusterzentren genannt. Das sind die Mittelpunkte, um die sich die Cluster bilden. **Means** steht dabei für den Durchschnitt, da die Zentroiden als Durchschnitt der zugehörigen Datenpunkte im Cluster berechnet werden. Am Ende sind die Daten innerhalb eines Clusters homogener als zu den Daten in anderen Clustern.\n",
     "\n",
-    "In einfachen Beispielen könnten wir die Cluster auch mit dem Auge erkennen und auch ablesen, welche Zahl für **k** sinnvoll wäre. Bei großen Datenmengen oder nicht eindeutigen Clustern benötigen wir dann aber die Hilfe des Algorithmus.\n",
+    "In einfachen Beispielen könnten wir die Cluster auch mit dem Auge erkennen und auch ablesen, welche Zahl für $k$ sinnvoll wäre. Bei großen Datenmengen oder nicht eindeutigen Clustern benötigen wir dann aber die Hilfe des Algorithmus.\n",
     "\n",
     "**Aufgabe 1:** Wie würdest du denn die folgenden Daten in Cluster aufteilen?\n",
     "\n",
@@ -97,6 +97,10 @@
     "(k-means-algorithmus)=\n",
     "## Der k-means-Clustering Algorithmus\n",
     "\n",
+    "```{margin}\n",
+    "Auf [dieser toll gemachten Seite](https://www.naftaliharris.com/blog/visualizing-k-means-clustering/) kann man den Algorithmus mit verschiedenen Datensammlugen graphisch nachspielen!\n",
+    "```\n",
+    "\n",
     "Der Ablauf des k-means-Clustering Algorithmus wird in folgende Schritte aufgeteilt:\n",
     "\n",
     "```{important}\n",
@@ -116,27 +120,29 @@
     "Die Schritte 3 und 4 werden solange wiederholt, bis sich die Zentroiden nicht mehr ändern oder eine maximale Anzahl an Iterationen erreicht ist.\n",
     "```\n",
     "\n",
-    "Versuche mal zu überlegen, worin das Ziel des Algorithmus besteht? Denke dabei an die Ähnlichkeit der Datenpunkte **innerhalb** eines Clusters und Punkte aus **verschiedenen** Clustern.\n",
+    "Versuche mal zu überlegen, worin das Ziel des Algorithmus besteht? Denke dabei an die Beziehung der Datenpunkte **innerhalb** eines Clusters und Datenpunkte aus **verschiedenen** Clustern.\n",
     "\n",
     "```{admonition} Lösung\n",
     ":class: tip, dropdown\n",
     "Folgende Kriterien sind das Ziel:\n",
     "- Die Ähnlichkeit der Datenpunkte **innerhalb** der einzelnen Cluster soll **möglichst hoch** sein.\n",
-    "- Die Ähnlichkeit der Datenpunkte **zwischen** den einzelnen Clustern soll **möglichst gering** sein.\n",
+    "- Die Ähnlichkeit der Datenpunkte **zwischen** den einzelnen Clustern soll **möglichst gering** sein.  \n",
+    "\n",
+    "Fazit: Die Datenpunkte **innerhalb** eines Cluster sollen eine **höchstmögliche Homogenität** haben.\n",
     "```\n",
     "\n",
     "**Frage:** Warum benötigt es in der Regel mehrere Durchgänge (Iterationen), um die Cluster vollständig zu bilden?\n",
     "\n",
     "```{admonition} Lösung\n",
     ":class: tip, dropdown\n",
-    "Der k-means Algorithmus braucht in der Regel mehrere Durchgänge, um die Cluster korrekt zu finden. Das liegt daran, dass die Zentroiden (also die Mittelpunkte der Cluster) anfangs zufällig gewählt werden. Am Anfang sind diese Zentroiden oft nicht optimal, da sie weit von den echten Clustern entfernt liegen können.\n",
+    "Der k-means Algorithmus braucht in der Regel mehrere Durchgänge, um die Cluster korrekt zu finden. Das liegt daran, dass die **Zentroiden** (also die Mittelpunkte der Cluster) anfangs **zufällig gewählt** werden. Am Anfang sind diese Zentroiden oft nicht optimal, da sie weit von den eigentlichen Clustern entfernt liegen können.\n",
     "\n",
     "In jeder Iteration passiert Folgendes:\n",
-    "1. Jeder Datenpunkt wird dem nächstgelegenen Zentrum zugewiesen, wodurch sich Cluster bilden oder ändern. Es ist gut möglich, dass ein Datenpunkt in einem anderen Cluster landet. Damit ändert sich dann auch die Position des Zentroiden.\n",
+    "1. Jeder Datenpunkt wird dem nächstgelegenen Zentroiden zugewiesen, wodurch sich Cluster bilden oder auch ändern. Es ist gut möglich, dass ein Datenpunkt nun in einem anderen Cluster landet. Damit ändert sich dann wiederum auch die Position des Zentroiden.\n",
     "2. Die Zentren werden dann neu berechnet, indem der Durchschnitt der Punkte in jeder Gruppe genommen wird.\n",
     "3. Dieser Prozess wiederholt sich: Die Datenpunkte werden immer wieder neu zugeordnet, und die Zentren verschieben sich dabei nach und nach.\n",
     "\n",
-    "Das Ziel ist, dass die Zentroiden eine Position erreichen, bei der sie sich nicht mehr groß bewegen, also eine stabile Lösung finden. Diese Stabilität wird auch **Konvergenz** genannt. Je nach Anfangslage der Zentroiden kann mehrere Interationen dauern, bis der Algorithmus eine stabile Gruppierung erreicht hat. Deshalb sind mehrere Iterationen nötig, um sicherzustellen, dass die Cluster gut und sinnvoll gebildet werden.\n",
+    "Das Ziel ist, dass die Zentroiden eine Position erreichen, bei der sie sich gar nicht mehr oder nicht mehr groß bewegen, also eine **stabile** Lösung finden. Diese Stabilität wird auch **Konvergenz** genannt. Je nach Anfangslage der Zentroiden kann mehrere Interationen dauern, bis der Algorithmus eine stabile Gruppierung erreicht hat. Deshalb sind mehrere Iterationen nötig, um sicherzustellen, dass die Cluster gut und sinnvoll gebildet werden.\n",
     "\n",
     "Dieses iterative Verfahren führt schließlich zu einer optimalen Gruppierung der Datenpunkte, wobei jeder Punkt in dem Cluster landet, das am besten zu seinen Eigenschaften passt.\n",
     "```\n"
@@ -146,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reale Anwendungsbeispiele\n",
+    "## Reale Anwendungsbeispiele\n",
     "\n",
     "Welche realen Anwendungsbeispiele kannst du dir vorstellen, bei denen das k-means Clustering eingesetzt werden könnte?\n",
     "\n",
@@ -210,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Aufgabe 1:** Wie würdest du die Obstsorten in Cluster aufteilen? Überlege dabei, wieviele Cluster sinnvoll wären, also welchen Wert *k* einnehmen würde.\n",
+    "**Aufgabe 1:** Wie würdest du die Obstsorten in Cluster aufteilen? Überlege dabei, wieviele Cluster sinnvoll wären, also welchen Wert $k$ einnehmen würde.\n",
     "\n",
     "```{admonition} Ergebnis k-Means\n",
     ":class: tip, dropdown\n",
@@ -223,7 +229,7 @@
     "k-Means-Clustering der Obstsorten mit k=3\n",
     "```\n",
     "\n",
-    "**Aufgabe 2:** Versuche mal, das Ergebnis in eigenen Worten zusammenzufassen.\n",
+    "**Aufgabe 2:** Versuche mal, das ermittelten Cluster in eigenen Worten zusammenzufassen.\n",
     "\n",
     "```{admonition} Beschreibung des Ergebnisses\n",
     ":class: tip, dropdown\n",
@@ -246,7 +252,7 @@
     "k-Means-Clustering der Obstsorten mit k=3 Variante 2\n",
     "```\n",
     "\n",
-    "Überlege mal einen Moment, wie diese unterschiedlichen Ergebnisse zustande kommen können.\n",
+    "Überlege mal einen Moment, wie der Algorithmus bei gleichen Daten zu diesen unterschiedlichen Ergebnisse kommen kann.\n",
     "\n",
     "```{admonition} Tipp\n",
     ":class: tip, dropdown\n",
@@ -269,10 +275,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Initialisierung der Clusterzentren mit k&#8209;means++\n",
+    "\n",
+    "**k-means++** ist eine verbesserte Methode zur Initialisierung der Clusterzentren beim k-means-Clustering. Es verbessert die Qualität und Effizienz des Algorithmus durch folgende Schritte:\n",
+    "\n",
+    "1. **Erster Startpunkt**:\n",
+    "   - Ein Punkt wird zufällig aus den Daten gewählt.\n",
+    "2. **Gewichtete Auswahl der weitere Startpunkte**:\n",
+    "   - Für jeden weiteren Startpunkt wird ein Punkt basierend auf seiner Distanz zu den nächsten bereits gewählten Startpunkten ausgewählt:\n",
+    "     - Punkte, die weiter entfernt sind, haben eine höhere Wahrscheinlichkeit, ausgewählt zu werden.\n",
+    "     - Die Wahrscheinlichkeit ist proportional zum Quadrat der Distanz zum nächsten Startpunkt ($D^2$).\n",
+    "3. **Wiederhole Schritt 2**, bis $k$ Startpunkte bestimmt sind.\n",
+    "4. **Führe anschließend das normale k-means-Verfahren durch**.\n",
+    "\n",
+    "**Vorteil:** Die Startpunkte werden optimal verteilt, was zu schnellerer Konvergenz und besseren Clustering-Ergebnissen führt.\n",
+    "\n",
+    "```{admonition} **Wie funktioniert die gewichtete Auswahl genau?**\n",
+    ":class: note\n",
+    "Angenommen, es gibt 5 Punkte mit diesen Distanzen zu den bestehenden Zentren:\n",
+    "\n",
+    "| Punkt | Entfernung $D$ | Gewicht $D^2$ | Wahrscheinlichkeit |\n",
+    "|-------|----------------|---------------|--------------------|\n",
+    "| $A$   | $1$            | $1^2 = 1$     | $1 / (1 + 9 + 25 + 36 + 64) = 1/135 \\approx 0.74\\%$ |\n",
+    "| $B$   | $3$            | $3^2 = 9$     | $9 / 135 \\approx 6.67\\%$ |\n",
+    "| $C$   | $5$            | $5^2 = 25$    | $25 / 135 \\approx 18.52\\%$ |\n",
+    "| $D$   | $6$            | $6^2 = 36$    | $36 / 135 \\approx 26.67\\%$ |\n",
+    "| $E$   | $8$            | $8^2 = 64$    | $64 / 135 \\approx 47.41\\%$ |\n",
+    "\n",
+    "[comment]: <Abstand nach Tabelle>\n",
+    "<div style=\"margin-top: 20px;\"></div>\n",
+    "\n",
+    "Punkt $E$ hat die größte Wahrscheinlichkeit, gewählt zu werden, aber nicht zu 100%. Es kann jedoch auch jeder andere Punkt gewählt werden, abhängig von seiner Wahrscheinlichkeit.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Ein Beispiel zum Nachrechnen\n",
     "\n",
     "Du weißt nun, wie der Algorithmus funktioniert und zu welchen Ergebnissen er führen kann. Am besten kannst du das nachvollziehen, indem du den Algorithmus selbst mal durchführst. Lade dir dieses\n",
     "{download}`Aufgabenblatt <./kmeansclustering_aufgabenblatt.pdf>` herunter und bearbeite es. Die Anweisungen findest du dem Arbeitsblatt. Viel Erfolg 💪"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Die richtige Wahl für $k$ mit der Elbow-Methode\n",
+    "\n",
+    "Bisher haben wir für unsere Beispiele $k$ so gewählt, dass es dem Verständnis passte. Doch in der Praxis stellt sich oft die Frage: **Wie wähle ich die optimale Anzahl von $k$ Clustern ?**\n",
+    "\n",
+    "Hier kommt die **Elbow-Methode** ins Spiel. Sie hilft uns, auf systematische Weise die Anzahl der Cluster zu bestimmen, die sowohl eine gute Datenaufteilung gewährleistet als auch unnötig viele Cluster vermeidet.\n",
+    "\n",
+    "Die Idee der Methode ist einfach:  \n",
+    "- Wir berechnen die sogenannte **Trägheit** (Summe der Abstände der Datenpunkte zu ihren Clusterzentren) für verschiedene Werte von $k$.  \n",
+    "- Die Trägheit nimmt mit steigender Clusteranzahl $k$ ab, weil mehr Cluster zu kleineren Distanzen führen.  \n",
+    "- Jedoch flacht die Abnahme ab, und ab einem bestimmten Punkt lohnt es sich nicht mehr, die Anzahl der Cluster weiter zu erhöhen. Dieser Punkt wird als **Knickpunkt (Elbow)** bezeichnet.\n",
+    "\n",
+    "Die optimale Anzahl der Cluster $k$ ist genau dort, wo dieser Knickpunkt liegt. Dies ist der Punkt, an dem die Verbesserung durch mehr Cluster stark nachlässt, und wir eine gute Balance zwischen Genauigkeit und Einfachheit erreichen.\n",
+    "\n",
+    "```{admonition}\n",
+    ":class: note\n",
+    "Warum funktioniert die Elbow-Methode?\n",
+    "Die Methode basiert auf der Idee, dass eine kleine Anzahl von Clustern zu einer schlechten Gruppierung führt, während eine zu große Anzahl von Clustern unnötig ist und zu Overfitting führen kann. Der Knick zeigt den Punkt, an dem sich der Aufwand für mehr Cluster nicht mehr lohnt.\n",
+    "```\n",
+    "\n",
+    "Mit der Elbow-Methode können wir also datengetrieben und anschaulich entscheiden, wie viele Cluster sinnvoll sind, anstatt dies nur durch Intuition oder Versuch und Irrtum zu bestimmen.\n"
    ]
   }
  ],
