--- a/book/ki/kmeansclustering.ipynb
+++ b/book/ki/kmeansclustering.ipynb
@@ -145,7 +145,12 @@
     "Das Ziel ist, dass die Zentroiden eine Position erreichen, bei der sie sich gar nicht mehr oder nicht mehr groß bewegen, also eine **stabile** Lösung finden. Diese Stabilität wird auch **Konvergenz** genannt. Je nach Anfangslage der Zentroiden kann mehrere Interationen dauern, bis der Algorithmus eine stabile Gruppierung erreicht hat. Deshalb sind mehrere Iterationen nötig, um sicherzustellen, dass die Cluster gut und sinnvoll gebildet werden.\n",
     "\n",
     "Dieses iterative Verfahren führt schließlich zu einer optimalen Gruppierung der Datenpunkte, wobei jeder Punkt in dem Cluster landet, das am besten zu seinen Eigenschaften passt.\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "**Hilfreiche Quellen fürs weitere Verständnis**\n",
+    "[Ki Buch](https://www.maschinennah.de/ki-buch/)\n",
+    "[Visualizing K-Means Clustering](https://www.naftaliharris.com/blog/visualizing-k-means-clustering/)\n",
+    "[K-means clustering mit Distanzen visualisiert](https://shabal.in/visuals/kmeans/6.html)"
    ]
   },
   {
