--- a/book/ki/kmeansclustering2_loesung.ipynb
+++ b/book/ki/kmeansclustering2_loesung.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -411,6 +411,10 @@
     "        Return: Euklidische Distanz zwischen zwei Datenpunkten.  \n",
     "        Z.B: 2.83\"\"\"\n",
     "    ...  # Hier Lösung ergänzen\n",
+    "    diff_x = datenpunkt1.x - datenpunkt2.x\n",
+    "    diff_y = datenpunkt1.y - datenpunkt2.y\n",
+    "    distanz = (diff_x ** 2 + diff_y ** 2) ** 0.5\n",
+    "    return round(distanz, 2)\n",
     "\n",
     "logger.info('Funktion berechne_euklidische_distanz definiert')"
    ]
@@ -467,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -485,6 +489,18 @@
     "       Return: Index (!) des nächsten Zentroiden.  \n",
     "       Z.B: 2 bedeutet, dass der dritte (!) Zentroid der nächstgelegene für den Datenpunkt ist.\"\"\"\n",
     "    ...  # Hier Lösung ergänzen\n",
+    "    geringste_distanz = float('inf')\n",
+    "    naechster_zentroid: int\n",
+    "    index = 0\n",
+    "    for zentroid in zentroiden:\n",
+    "        distanz = berechne_euklidische_distanz(datenpunkt, zentroid)\n",
+    "        logger.debug(f\"Distanz von {datenpunkt} zu Zentroid {index} ({zentroid}): {distanz}\")\n",
+    "        if distanz < geringste_distanz:\n",
+    "            geringste_distanz = distanz\n",
+    "            naechster_zentroid = index\n",
+    "        index += 1\n",
+    "    logger.debug(f\"Nächster Zentroid für {datenpunkt} ist Zentroid {naechster_zentroid}\")\n",
+    "    return naechster_zentroid\n",
     "\n",
     "logger.info('Funktion finde_naechsten_zentroiden definiert')"
    ]
@@ -529,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +564,14 @@
     "    clusters: dict[int, list[Datenpunkt]] = {}\n",
     "    for zentroid in range(len(zentroiden)):\n",
     "        clusters[zentroid] = []\n",
+    "\n",
     "    ...  # Hier die weitere Lösung ergänzen\n",
+    "    for datenpunkt in datenpunkte:\n",
+    "        index_naechster_zentroid = finde_naechsten_zentroiden(zentroiden, datenpunkt)\n",
+    "        clusters[index_naechster_zentroid].append(datenpunkt)\n",
+    "        logger.debug(f\"{datenpunkt} wurde Zentroid {index_naechster_zentroid} zugewiesen\")\n",
+    "    logger.debug(f\"Zuweisungen der Datenpunkte zu Zentroiden: {clusters}\")\n",
+    "    return clusters\n",
     "\n",
     "logger.info('Funktion weise_cluster_zu definiert')"
    ]
@@ -602,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -620,6 +643,15 @@
     "       Return: Position des Zentroiden als Datenpunkt.  \n",
     "       Z.B: Datenpunkt(2.5, 3.7)\"\"\"\n",
     "    ...  # Hier Lösung ergänzen\n",
+    "    x_summe = 0\n",
+    "    y_summe = 0\n",
+    "    for datenpunkt in datenpunkte:\n",
+    "        x_summe += datenpunkt.x\n",
+    "        y_summe += datenpunkt.y\n",
+    "    x_mittelwert = x_summe / len(datenpunkte)\n",
+    "    y_mittelwert = y_summe / len(datenpunkte)\n",
+    "\n",
+    "    return Datenpunkt(x_mittelwert, y_mittelwert)\n",
     "\n",
     "logger.info('Funktion berechne_zentroid definiert')"
    ]
@@ -683,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,8 +724,12 @@
     "       Return: Liste der neuen Zentroiden.  \n",
     "       Z.B: [Datenpunkt(1.4, 4.5), Datenpunkt(5.2, 8.3), Datenpunkt(3.1, 9.2)]\"\"\"\n",
     "    ...  # Hier Lösung ergänzen\n",
-    "    \n",
-    "logger.info('Funktion aktualisiere_zentroiden definiert')"
+    "    neue_zentroiden: list[Datenpunkt] = []\n",
+    "    for datenpunkte_in_cluster in clusters.values():\n",
+    "        neuer_zentroid: Datenpunkt = berechne_zentroid_koordinaten(datenpunkte_in_cluster)\n",
+    "        neue_zentroiden.append(neuer_zentroid)\n",
+    "    logger.info(f\"Aktualisierte Zentroiden: {neue_zentroiden}\")\n",
+    "    return neue_zentroiden"
    ]
   },
   {
