k-Means Bild für Elbow Methode

--- a/book/ki/kmeansclustering.ipynb
+++ b/book/ki/kmeansclustering.ipynb
@@ -7,7 +7,6 @@
     "```{margin}\n",
     "Shortlink: https://tinyurl.com/tgi13kmeans\n",
     "```\n",
-    "\n",
     "# k-Means-Clustering\n",
     "Du kennst bereits den [k-Nächste-Nachbarn-Algorithmus](knearestneighbor), ein Verfahren, das mit [Trainingsdaten](#trainingsdaten) neue Daten klassifiziert. Nun betrachten wir [k-Means-Clustering](https://de.wikipedia.org/wiki/K-Means-Algorithmus), einen Algorithmus, um [Datenpunkte](#datenpunkt) in sogenannte Cluster zu gruppieren.\n",
     "\n",
@@ -94,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(k-means-algorithmus)=\n",
+    "(k-means-clustering-algorithmus)=\n",
     "## Der k-means-Clustering Algorithmus\n",
     "\n",
     "```{margin}\n",
@@ -334,10 +333,20 @@
     "\n",
     "Hier kommt die **Elbow-Methode** ins Spiel. Sie hilft uns, auf systematische Weise die Anzahl der Cluster zu bestimmen, die sowohl eine gute Datenaufteilung gewährleistet als auch unnötig viele Cluster vermeidet.\n",
     "\n",
-    "Die Idee der Methode ist einfach:  \n",
+    "Die Idee der Methode ist wie folgt:  \n",
     "- Wir berechnen die sogenannte **Trägheit** (Summe der Abstände der Datenpunkte zu ihren Clusterzentren) für verschiedene Werte von $k$.  \n",
     "- Die Trägheit nimmt mit steigender Clusteranzahl $k$ ab, weil mehr Cluster zu kleineren Distanzen führen.  \n",
     "- Jedoch flacht die Abnahme ab, und ab einem bestimmten Punkt lohnt es sich nicht mehr, die Anzahl der Cluster weiter zu erhöhen. Dieser Punkt wird als **Knickpunkt (Elbow)** bezeichnet.\n",
+    "\n",
+    "```{figure} bilder/kmeans_elbow_demo.svg\n",
+    "---\n",
+    "width: 90%\n",
+    "name: fig_kmeans_elbow_demo.svg\n",
+    "align: center\n",
+    "---\n",
+    "Demonstration der Elbow-Methode\n",
+    "```\n",
+    "\n",
     "\n",
     "Die optimale Anzahl der Cluster $k$ ist genau dort, wo dieser Knickpunkt liegt. Dies ist der Punkt, an dem die Verbesserung durch mehr Cluster stark nachlässt, und wir eine gute Balance zwischen Genauigkeit und Einfachheit erreichen.\n",
     "\n",
