--- a/book/ki/kmeansclustering2.ipynb
+++ b/book/ki/kmeansclustering2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Programmierung des Algorithmus\n",
     "\n",
-    "Wir werden nun den k-Means-Clustering Algorithmus Stück für Stück zusammenbauen. Um am Ende nicht ein großes Codefragment zu haben, versuchen wir, soviel Vorarbeit wie möglich zu erledigen, so dass du dich am Ende ganz auf die Implementierung des Algorithmus konzentrieren kannst (Stichwort: externe kognitive Belastung gering halten, siehe [Cognitive Load Theory (CLT)](https://de.wikipedia.org/wiki/Cognitive_Load_Theory 😉)."
+    "Wir werden nun den k-Means-Clustering Algorithmus Stück für Stück zusammenbauen. Um am Ende nicht ein großes Codefragment zu haben, versuchen wir, soviel Vorarbeit wie möglich zu erledigen, so dass du dich am Ende ganz auf die Implementierung des Algorithmus konzentrieren kannst (Stichwort: externe kognitive Belastung gering halten, siehe [Cognitive Load Theory \\(CLT\\)](https://de.wikipedia.org/wiki/Cognitive_Load_Theory 😉)."
    ]
   },
   {
