Kleinere Fixes in KI

--- a/book/ki/ki_allgemein.ipynb
+++ b/book/ki/ki_allgemein.ipynb
@@ -79,11 +79,11 @@
     ": Ein Algorithmus, der Schritt für Schritt die Fehler eines Modells reduziert, indem er die Parameter so anpasst, dass die Fehlerfunktion kleiner wird. (s. [Backpropagation](#backpropagation), [Lernrate](#lernrate))\n",
     "\n",
     "(k-means)=\n",
-    "K-Means Clustering  \n",
+    "k-Means Clustering  \n",
     ": Ein Algorithmus, der [Datenpunkte](#datenpunkt) in \\(k\\) Gruppen (Cluster) aufteilt, indem er iterativ ihre Ähnlichkeit optimiert.\n",
     "\n",
     "(k-naechste-nachbarn-algorithmus)=\n",
-    "K-Nächste-Nachbarn-Algorithmus  \n",
+    "k-Nächste-Nachbarn-Algorithmus  \n",
     ": Ein Algorithmus, der Vorhersagen basierend auf den \\(k\\) ähnlichsten [Datenpunkten](#datenpunkt) trifft. Beispiel: Die 3 nächsten Nachbarn eines Punktes bestimmen, ob er eher \"Katze\" oder \"Hund\" ist. (s. [Distanzmaße](#distanzmasse))\n",
     "\n",
     "(label)=\n",
@@ -162,6 +162,11 @@
     "Zielmerkmal\n",
     ": Dasjenige Merkmal, das *vorhergesagt* werden soll. Beispiel: In einer Bilderdatenbank könnte das Zielmerkmal die Kategorie des Bildes sein, z. B. \"Katze\" oder \"Hund\". (s. [Merkmal](#merkmal))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
