--- a/book/ki/kmeansclustering.ipynb
+++ b/book/ki/kmeansclustering.ipynb
@@ -8,7 +8,7 @@
     "Shortlink: https://tinyurl.com/tgi13kmeans\n",
     "```\n",
     "# k-Means-Clustering\n",
-    "Du kennst bereits den [k-Nächste-Nachbarn-Algorithmus](knearestneighbor), ein Verfahren, das mit [Trainingsdaten](#trainingsdaten) neue Daten klassifiziert. Nun betrachten wir [k-Means-Clustering](https://de.wikipedia.org/wiki/K-Means-Algorithmus), einen Algorithmus, um [Datenpunkte](#datenpunkt) in sogenannte Cluster zu gruppieren.\n",
+    "Du kennst bereits den [k-Nächste-Nachbarn-Algorithmus](knearestneighbor), ein Verfahren, das mit [Trainingsdaten](#trainingsdaten) neue Daten klassifiziert. Nun betrachten wir [k-Means-Clustering](https://de.wikipedia.org/wiki/k-Means-Algorithmus), einen Algorithmus, um [Datenpunkte](#datenpunkt) in sogenannte Cluster zu gruppieren.\n",
     "\n",
     "Im Bereich der KI wird oft mit großen Datenmengen gearbeitet, die auf Muster untersucht und in Gruppen eingeteilt werden. Algorithmen dieser Art sind Verfahren der [Clusteranalyse](https://de.wikipedia.org/wiki/Clusteranalyse). k-Means ist so ein Algorithmus, der Datenpunkte ohne vorherige Kenntnis der Gruppenzugehörigkeit in $k$ Cluster einteilt. Das macht k-Means zu einem [unüberwachten Lernalgorithmus](#unueberwachtes-lernen). Seine Stärke liegt in der effizienten Strukturierung großer Datensätze und dem Entdecken versteckter Muster.\n",
     "\n",
@@ -147,9 +147,9 @@
     "```\n",
     "\n",
     "**Hilfreiche Quellen fürs weitere Verständnis**\n",
-    "[Ki Buch](https://www.maschinennah.de/ki-buch/)\n",
-    "[Visualizing K-Means Clustering](https://www.naftaliharris.com/blog/visualizing-k-means-clustering/)\n",
-    "[K-means clustering mit Distanzen visualisiert](https://shabal.in/visuals/kmeans/6.html)"
+    "- [Ki Buch: Wetterdaten-Beispiel](https://www.maschinennah.de/ki-buch/)\n",
+    "- [Visualizing k-Means Clustering](https://www.naftaliharris.com/blog/visualizing-k-means-clustering/)\n",
+    "- [k-means clustering visualisiert mit Distanzenberechnug](https://shabal.in/visuals/kmeans/6.html)"
    ]
   },
   {
@@ -268,7 +268,7 @@
     "\n",
     "```{admonition} Lösung\n",
     ":class: tip, dropdown\n",
-    "Die unterschiedlichen Ergebnisse sind eine Folge davon, dass der Algorithmus mit zufälligen Startpunkten arbeitet. Je nachdem, wo die Zentroiden am Anfang liegen, teilt der Algorithmus die Punkte unterschiedlich ein. Das zeigt, dass K-Means manchmal unterschiedliche Ergebnisse liefern kann, auch wenn die Daten gleich bleiben.\n",
+    "Die unterschiedlichen Ergebnisse sind eine Folge davon, dass der Algorithmus mit zufälligen Startpunkten arbeitet. Je nachdem, wo die Zentroiden am Anfang liegen, teilt der Algorithmus die Punkte unterschiedlich ein. Das zeigt, dass k-Means manchmal unterschiedliche Ergebnisse liefern kann, auch wenn die Daten gleich bleiben.\n",
     "- Wenn ein Start-Zentroid mitten in einer dichten Datenmenge liegt, zieht er schnell viele Punkte an.\n",
     "- Liegt ein anderer Start-Zentroid weit weg, wird er vielleicht nur wenige Punkte anziehen.\n",
     "Der Algorithmus findet also nicht immer die 'beste' Lösung, sondern eine, die von den Startbedingungen abhängt\n",
