--- a/book/ki/kmeansclustering2_loesung.ipynb
+++ b/book/ki/kmeansclustering2_loesung.ipynb
@@ -617,7 +617,7 @@
    "source": [
     "# Aufgabe 4: Aktualisieren der Zentroiden\n",
     "\n",
-    "Wir kommen der fertigen Implementierung des K-Means-Algorithmus immer näher.\n",
+    "Wir kommen der fertigen Implementierung des k-Means-Algorithmus immer näher.\n",
     "\n",
     "## Koordinaten eines Zentroiden berechnen\n",
     " Wir benötigen nun zum einen noch eine Funktion `berechne_zentroid_koordinaten()`, welche uns aus den Datenpunkten eines Clusters die neuen Koordinaten des Zentroiden berechnet. Diese Funktion wird dann von `aktualisiere_zentroiden()` verwendet, um die Zentroiden in jeder Iteration alle neu zu berechnen."
