--- a/book/ki/kmeansclustering2_loesung.ipynb
+++ b/book/ki/kmeansclustering2_loesung.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,9 @@
     "def test_example():\n",
     "    assert 1 == 1, \"1 sollte gleich 1 sein\"\n",
     "\n",
-    "test_example()"
+    "test_example()\n",
+    "# Diese Nachricht wird nur angezeigt, wenn der Test erfolgreich war\n",
+    "logger.info('Der Test wurde erfolgreich ausgeführt')"
    ]
   },
   {
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -164,8 +166,7 @@
     "        \"\"\"Gibt eine lesbare Repräsentation eines Datenpunktes zurück.\"\"\"\n",
     "        return f\"Datenpunkt({self.x}, {self.y})\"\n",
     "\n",
-    "logger.info('Klasse Datenpunkt definiert')\n",
-    "logger.debug(Datenpunkt(1.23456789, 2.3456789))  # Ausgabe: Datenpunkt(1.23, 2.35)    "
+    "logger.info('Klasse Datenpunkt definiert')"
    ]
   },
   {
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -259,11 +260,10 @@
     "        y = random.uniform(0, zahlenraum)\n",
     "        datenpunkt = Datenpunkt(x, y)\n",
     "        datenpunkte.add(datenpunkt)\n",
-    "    logger.info(f\"Generierte Datenpunkte im {zahlenraum}x{zahlenraum} Zahlenraum: {datenpunkte}\")\n",
+    "    logger.debug(f\"Generierte Datenpunkte im {zahlenraum}x{zahlenraum} Zahlenraum: {datenpunkte}\")\n",
     "    return list(datenpunkte)\n",
     "\n",
-    "logger.info('Funktion generiere_datenpunkte definiert')\n",
-    "logger.debug(generiere_datenpunkte(3))  # Ungefähre Ausgabe: [Datenpunkt(1.4, 2.3), Datenpunkt(3.1, 4.5), Datenpunkt(5.7, 6.2)]\n"
+    "logger.info('Funktion generiere_datenpunkte definiert')"
    ]
   },
   {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -333,13 +333,10 @@
     "       Return: Liste der initialisierten Zentroiden.  \n",
     "       Z.B: [Datenpunkt(1.4, 4.5), Datenpunkt(5.2, 8.3), Datenpunkt(3.1, 9.2)]\"\"\"\n",
     "    zentroiden = random.sample(datenpunkte, anzahl_zentroiden)\n",
+    "    logger.debug(f\"Initialisierte Zentroiden: {zentroiden}\")\n",
     "    return zentroiden\n",
     "\n",
-    "logger.info('Funktion initialisiere_zentroiden definiert')\n",
-    "temp_datenpunkte = generiere_datenpunkte(10)\n",
-    "temp_zentroiden = initialisiere_zentroiden(temp_datenpunkte, 2)\n",
-    "# Ungefähre Ausgabe: Initialisierte Zentroiden: [Datenpunkt(1.4, 2.3), Datenpunkt(3.1, 4.5)]\n",
-    "logger.debug(f\"Initialisierte Zentroiden: {temp_zentroiden}\")"
+    "logger.info('Funktion initialisiere_zentroiden definiert')"
    ]
   },
   {
